feat(service): Add update http service api
